# SolarSimulatorPython

./: .gitignore  README.md  batch_run.sh  devenv.nix  generator.py  init_cond_2_stars.py  integrators.py  interactions.py  main.py  meow.ipynb  pyproject.toml  requirements.txt  run_script.py  tests.py  unit_tests.py  visualizer.py
