[project]
name = "solarsimulatorpython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
